--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img class="img2" src="images/dice6.png">
       </div>
-
+    
+    <script src="index.js"></script>
     </div>
 
 
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    🎲 Rajdeep Ghosh 🎲
   </footer>
 </html>
