Create Roll Dice button

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice6.png">
       </div>
-    
-    <script src="index.js"></script>
     </div>
-
 
   </body>
 
   <footer>
+    <button class="btn">Roll Dice</button><br><br>
     🎲 Rajdeep Ghosh 🎲
   </footer>
+
+  <!-- JS file  -->
+
+  <script src="index.js"></script>
 </html>
