--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Dicee</h1>
 
       <div class="dice">
         <p>Player 1</p>
