Add funtionality for rolling dice button via keyboard button press. This resolves #2

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </body>
 
   <footer>
-    <button class="btn">Roll Dice</button><br><br>
+    <button class="btn">Roll Dice or press R</button><br><br>
     🎲 Rajdeep Ghosh 🎲
   </footer>
 
